--- a/ბლოგი/css/main.css
+++ b/ბლოგი/css/main.css
@@ -6,7 +6,9 @@
     display: flex;
 }
 /* /global codes */
-
+.main{
+    color: #303342;
+}
 header img{
   display: block;
   margin-left: auto;
@@ -22,6 +24,8 @@ nav {
     text-align: center;
     word-spacing: 50px;
     justify-content:space-between;
+    margin-left: 12.77777777777778%;
+    margin-right: 12.77777777777778%;
  
 }
 nav section{
@@ -38,13 +42,6 @@ nav ul li {
 
 
 }
- nav ul li:nth-child(1) {
-     color :#303342;
-
-     
-
-
- }
 .material-icons{
      font-size: 15px;
      margin-left: 0.5%;
@@ -64,12 +61,16 @@ nav ul li {
     line-height: 22.8px;
     text-align: center;
     color: #606060;
+    margin-bottom: 3.535%;
+    margin-top: 4.292%;
     
 }
 footer{
     justify-content: space-between;
     font-size: 17px;
     color: #606060;
+    margin-left: 12.77777777777778%;
+    margin-right: 12.77777777777778%;
 
 }
 .fb,.in{
