--- a/გადაცემები/css/main.css
+++ b/გადაცემები/css/main.css
@@ -5,7 +5,31 @@
 .flex{
     display: flex;
 }
+.reset{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	display: block;
+	list-style: none;
+	quotes: none;
+	content: '';
+	content: none;
+	border-collapse: collapse;
+	border-spacing: 0;
+
+
+
+}
 /* /global codes */
+body{
+    max-width: 1488px;
+}
+
+.main{
+    color: #303342;
+}
 
 header img{
   display: block;
@@ -15,13 +39,16 @@ header img{
   height: 2%;
   margin-top: 4%;
   margin-bottom: 4%;
+
 }
 
 
-nav {
+.nav1 {
     text-align: center;
-    /* word-spacing: 50px; */
+    word-spacing: 50px;
     justify-content:space-between;
+    margin-left: 12.77777777777778%;
+    margin-right: 12.77777777777778%;
  
 }
 nav section{
@@ -33,18 +60,9 @@ nav ul li {
     list-style-type: none;
     color: #606060;
     font-size: 20px;
-    
-    /* word-spacing: 50px; */
-
 
 }
- nav ul li:nth-child(1) {
-     color :#303342;
 
-     
-
-
- }
 .material-icons{
      font-size: 15px;
      margin-left: 0.5%;
@@ -64,14 +82,27 @@ nav ul li {
     line-height: 22.8px;
     text-align: center;
     color: #606060;
+    margin-bottom: 3.535%;
+    margin-top: 4.292%;
     
 }
 footer{
     justify-content: space-between;
     font-size: 17px;
     color: #606060;
+    margin-left: 12.77777777777778%;
+    margin-right: 12.77777777777778%;
 
 }
 .fb,.in{
     font-size: 16px;
+}
+.reset li {
+    font-size:20px;
+}
+.nav2{
+    margin-top: 4.5%;
+    margin-left: 18.5%;
+    line-height: 31px;
+    margin-bottom: 26.7%;
 }
