--- a/ბლოგი/css/main.css
+++ b/ბლოგი/css/main.css
@@ -9,6 +9,11 @@
 .main{
     color: #303342;
 }
+.img{
+    width: 100px;
+
+
+}
 header img{
   display: block;
   margin-left: auto;
@@ -55,24 +60,44 @@ nav ul li {
      color: #606060;
  }
 
-.qucha{
-   
-    font-size: 19px;
-    line-height: 22.8px;
-    text-align: center;
-    color: #606060;
-    margin-bottom: 3.535%;
-    margin-top: 4.292%;
-    
-}
+
 footer{
     justify-content: space-between;
     font-size: 17px;
     color: #606060;
     margin-left: 12.77777777777778%;
     margin-right: 12.77777777777778%;
+    margin-bottom: 50px;
+    margin-top: 40px;
 
 }
 .fb,.in{
     font-size: 16px;
+}
+ 
+article{
+    width: 800px;
+    margin-left: 50px;
+}
+article h1{
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+article h2{
+    font-size: 18px;
+    margin-top: 10px;
+    text-align: right;
+}
+article p{
+    font-size: 17px;
+    text-indent: 80px;
+}
+.sec2{
+    width: 900px;
+    margin-left: auto;
+    margin-right:auto;
+}
+.div2{
+    margin-top: 60px;
+    margin-bottom: 40px;
 }
