--- a/კონტაქტი/css/main.css
+++ b/კონტაქტი/css/main.css
@@ -9,11 +9,6 @@
 .main{
     color: #303342;
 }
-.img{
-    width: 100px;
-
-
-}
 header img{
   display: block;
   margin-left: auto;
@@ -38,10 +33,6 @@ nav section{
 
   
 }
-footer a{
-    text-decoration-line: none;
-    color: #606060;
-}
 nav ul li {
     list-style-type: none;
     color: #606060;
@@ -50,7 +41,9 @@ nav ul li {
     word-spacing: 50px;
 
 
+
 }
+
 .material-icons{
      font-size: 15px;
      margin-left: 0.5%;
@@ -65,6 +58,8 @@ nav ul li {
  }
 
 
+
+
 footer{
     justify-content: space-between;
     font-size: 17px;
@@ -72,36 +67,41 @@ footer{
     margin-left: 12.77777777777778%;
     margin-right: 12.77777777777778%;
     margin-bottom: 50px;
-    margin-top: 40px;
 
+}
+footer a{
+    text-decoration-line: none;
+    color: #606060;
 }
 .fb,.in{
     font-size: 16px;
 }
- 
-article{
-    width: 800px;
-    margin-left: 50px;
+.add{
+    margin-left: 10px;
+    color: #303342;
 }
-article h1{
+.contact{
+    color: #606060;
     font-size: 18px;
-    margin-bottom: 40px;
-}
-article h2{
-    font-size: 18px;
-    margin-top: 10px;
-    text-align: right;
-}
-article p{
-    font-size: 17px;
-    text-indent: 80px;
-}
-.sec2{
-    width: 900px;
+    margin-bottom: 400px;
+    margin-top: 400px;
+    line-height: 1.5;
     margin-left: auto;
-    margin-right:auto;
+   
+    
+
 }
-.div2{
-    margin-top: 60px;
-    margin-bottom: 40px;
+.contact h1{
+    font-size: 20px;
+    color: #303342;
+    margin-bottom: 10px;}
+   
+.sp{
+    word-spacing: 10px;
+    text-align: center;
+}
+.map{
+    margin-bottom: 200px;
+    margin-top: 200px;
+    margin-right: auto;
 }
