--- a/css/main.css
+++ b/css/main.css
@@ -39,10 +39,13 @@ nav ul li {
     font-size: 20px;
     
     word-spacing: 50px;
-
-
-
 }
+
+    footer a{
+        text-decoration-line: none;
+        color: #606060;
+    }
+
 
 .material-icons{
      font-size: 15px;
