--- a/კონტაქტი/css/main.css
+++ b/კონტაქტი/css/main.css
@@ -83,10 +83,11 @@ footer a{
 .contact{
     color: #606060;
     font-size: 18px;
-    margin-bottom: 400px;
-    margin-top: 400px;
+   
+    margin-top: 240px;
     line-height: 1.5;
     margin-left: auto;
+    margin-right: 40px;
    
     
 
@@ -97,11 +98,13 @@ footer a{
     margin-bottom: 10px;}
    
 .sp{
+    margin-top: 10px;
     word-spacing: 10px;
-    text-align: center;
+    
+    color: #303342;
 }
 .map{
-    margin-bottom: 200px;
-    margin-top: 200px;
+    margin-bottom: 100px;
+    margin-top: 100px;
     margin-right: auto;
 }
