--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,52 @@
     display: flex;
 }
 /* /global codes */
+
+/* fonts */
+@font-face{
+    font-family: font1;
+    src: url(../fonts/bpg_nino_mkhedruli_bold.ttf);
+ }
+ @font-face{
+     font-family: font2;
+     src: url(../fonts/bpg_nino_mtavruli_bold.otf)
+ }
+ @font-face{
+     font-family: font3;
+     src: url(../fonts/bpg_nino_mtavruli_normal.ttf)
+ }
+ 
+ html{
+    font-family: font3;
+
+}
+ .main{
+     font-family: font2;
+ }
+ nav{
+     font-family: font1;
+ }
+ footer{
+     font-family: font2;
+ }
+
+ 
+ /* end fonts */ 
+
+ 
 .main{
     color: #303342;
 }
 header img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 10%;
-  height: 2%;
-  margin-top: 4%;
-  margin-bottom: 4%;
-}
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 170px;
+    height: 20px;
+    margin-top: 30px;
+    margin-bottom: 25px;
+  }
+
 
 
 nav {
@@ -64,7 +98,7 @@ section iframe{
    
     margin-left: auto;
     margin-right: auto;
-    margin-top: 4.444444444444444%;
+    margin-top: 30px;
 
 }
 
@@ -88,7 +122,7 @@ footer{
     color: #606060;
     margin-left: 12.77777777777778%;
     margin-right: 12.77777777777778%;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 
 }
 .fb,.in{
