--- a/ბლოგი/css/main.css
+++ b/ბლოგი/css/main.css
@@ -6,23 +6,65 @@
     display: flex;
 }
 /* /global codes */
+
+
+/* fonts */
+@font-face{
+   font-family: font1;
+   src: url(../fonts/bpg_nino_mkhedruli_bold.ttf);
+}
+@font-face{
+    font-family: font2;
+    src: url(../fonts/bpg_nino_mtavruli_bold.otf)
+}
+@font-face{
+    font-family: font3;
+    src: url(../fonts/bpg_nino_mtavruli_normal.ttf)
+}
+
+
+.main{
+    font-family: font2;
+}
+nav{
+    font-family: font1;
+}
+footer{
+    font-family: font2;
+    
+}
+h2{
+    font-family: font3;
+}
+h1{
+    font-family: font2;
+}
+p{
+    font-family: font2;
+}
+
+/* end fonts */
+
+  
+
+
 .main{
     color: #303342;
+   
 }
 .img{
     width: 100px;
-
-
 }
+
 header img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 10%;
-  height: 2%;
-  margin-top: 4%;
-  margin-bottom: 4%;
-}
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 170px;
+    height: 20px;
+    margin-top: 30px;
+    margin-bottom: 25px;
+  }
 
 
 nav {
@@ -31,6 +73,7 @@ nav {
     justify-content:space-between;
     margin-left: 12.77777777777778%;
     margin-right: 12.77777777777778%;
+   
  
 }
 nav section{
@@ -80,24 +123,24 @@ footer{
 }
  
 article{
-    width: 800px;
+    
     margin-left: 50px;
 }
 article h1{
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 40px;
 }
 article h2{
-    font-size: 18px;
+    font-size: 16px;
     margin-top: 10px;
     text-align: right;
 }
 article p{
-    font-size: 17px;
+    font-size: 14px;
     text-indent: 80px;
 }
 .sec2{
-    width: 900px;
+    width: 1100px;
     margin-left: auto;
     margin-right:auto;
 }
