--- a/კონტაქტი/css/main.css
+++ b/კონტაქტი/css/main.css
@@ -6,19 +6,54 @@
     display: flex;
 }
 /* /global codes */
+
+
+/* fonts */
+@font-face{
+    font-family: font1;
+    src: url(../fonts/bpg_nino_mkhedruli_bold.ttf);
+ }
+ @font-face{
+     font-family: font2;
+     src: url(../fonts/bpg_nino_mtavruli_bold.otf)
+ }
+ @font-face{
+     font-family: font3;
+     src: url(../fonts/bpg_nino_mtavruli_normal.ttf)
+ }
+ 
+ html{
+    font-family: font3;
+
+}
+ .main{
+     font-family: font2;
+ }
+ nav{
+     font-family: font1;
+ }
+ footer{
+     font-family: font2;
+ }
+.add{
+    font-family: font2;
+}
+ 
+ /* end fonts */ 
+
+
 .main{
     color: #303342;
 }
 header img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 10%;
-  height: 2%;
-  margin-top: 4%;
-  margin-bottom: 4%;
-}
-
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 170px;
+    height: 20px;
+    margin-top: 30px;
+    margin-bottom: 25px;
+  }
 
 nav {
     text-align: center;
