--- a/css/main.css
+++ b/css/main.css
@@ -128,3 +128,85 @@ footer{
 .fb,.in{
     font-size: 16px;
 }
+/*  media tags */
+ 
+
+@media screen and (min-width:300px) {
+    section iframe{
+        width: 270px;
+        height: 320px;;
+        margin-top: 10px;
+    }
+    footer{
+       
+        margin-bottom: 10px;
+ 
+ 
+}
+@media screen and (min-width:400px) {
+    section iframe{
+        width: 300px;
+        height: 260px;;
+        margin-top: 10px;
+    }
+    footer{
+       
+        margin-bottom: 15px;
+ 
+ 
+}
+ 
+ 
+/*  small == tablet (bootstrap sm) ---  768px - 991px    */
+ 
+@media screen and (min-width:768px) {
+    section iframe{
+        width: 580px;
+        height: 350px;;
+        margin-top: 15px;
+    }
+    footer{
+       
+        margin-bottom: 25px;
+ 
+ 
+}
+ 
+}
+ 
+ 
+ 
+/*  medium == notebook small (bootstrap md) ---  992px - 1999px    */
+ 
+@media screen and (min-width:992px) {
+ 
+    section iframe{
+        width: 780px;
+        height: 450px;;
+        margin-top: 25px;
+    }
+    footer{
+       
+        margin-bottom: 30px;
+ 
+ 
+}
+}
+ 
+ 
+ 
+/*  large == notebook large (bootstrap lg) ---  1200px +   */
+ 
+@media screen and (min-width:1200px) {
+    section iframe{
+        width: 980px;
+        height: 550px;;
+        margin-top: 35px;
+    }
+    footer{
+       
+        margin-bottom: 35px;
+ 
+ 
+}
+}
