--- a/გადაცემები/css/main.css
+++ b/გადაცემები/css/main.css
@@ -145,7 +145,7 @@ footer{
     line-height: 31px;
    
 }
- .container{
+ .container1{
      font-size: 14px;
      width: 210px;
      
@@ -179,20 +179,24 @@ footer{
  
 
 @media screen and (min-width:300px) {
-    section iframe{
-        width: 200px;
-        height: 150px;;
-    }
-    .search{
-        margin-left:6%;
+   
+ .nav2{
+     display: none;
+ }
+ .div1{
+     margin-left: 0px;
+  
+ }
+ .container1{
+     width: 270px;
+     margin-left: auto;
+     margin-right: auto;
+     font-size: 13px;
+ }
+ footer{
+     margin-bottom: 10px;
 
-
-    }
-    .tran{
-        margin-right: 6%;
-    }
- 
- 
+ }
 }
  
  
@@ -200,7 +204,11 @@ footer{
 /*  small == tablet (bootstrap sm) ---  768px - 991px    */
  
 @media screen and (min-width:768px) {
- 
+ .nav2{
+     display: flex;   
+     margin-left: 10px; 
+    
+ }
  
 }
  
@@ -210,7 +218,11 @@ footer{
  
 @media screen and (min-width:992px) {
  
- 
+    .nav2{
+         
+        margin-left: 60px; 
+    }
+    
 }
  
  
@@ -218,5 +230,15 @@ footer{
 /*  large == notebook large (bootstrap lg) ---  1200px +   */
  
 @media screen and (min-width:1200px) {
-   
+    .div1{
+        width: 1000px;
+
+    }
+    .glavni{
+        display: flex;
+    }
+    .sec1{
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
